add some styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
 			</div>
 
 			<div class="postcard-body">
-				<div class="body-left">I am the left side</div>
-				<div class="body-right">I am the right side</div>
+				<div class="body-left">
+					Hi, I'm Pat! <br />
+					I want to be a Full stack developer.<br />
+					I just made my postcard for pre-work.<br /><br />
+					Very excited for learning more cool stuff!<br />
+				</div>
+				<div class="body-right">
+					<img
+						src="https://media.wired.com/photos/5cdefb92b86e041493d389df/1:1/w_988,h_988,c_limit/Culture-Grumpy-Cat-487386121.jpg"
+						alt="grumpy-cat"
+					/>
+				</div>
 			</div>
 
 			<div class="postcard-footer">
